# basis_supervise

./: .gitignore  LICENSE  README.md  convert_data.py  csv_process.ipynb  pyproject.toml  requirements.txt  run_qlib.py  update_basis.py
app/: __init__.py  utils.py
app/algorithm/: basis.py
app/common/: holidays.py  log.py  utils.py
app/db/: session.py  sheet_class.py
app/tushare/: __init__.py  config.py
data/csv_data/: IC1.csv  IC2.csv  IC3.csv  IC4.csv  IF1.csv  IF2.csv  IF3.csv  IF4.csv  IH1.csv  IH2.csv  IH3.csv  IH4.csv  IM1.csv  IM2.csv  IM3.csv  IM4.csv
qlib_scripts/: __init__.py  pipeline.py
yaml_config/: IC.yaml
